--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOh5PJ6jko3vS3xWULG+Fsj"
+      "authorship_tag": "ABX9TyMc4jD/mqLPTeBnIm0dwXx2"
     },
     "kernelspec": {
       "name": "python3",
@@ -4016,15 +4016,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "ec1a7f6c-7986-4018-fb90-3270fc7742f7"
+        "outputId": "50056387-b261-46c5-e052-03f487d7b19c"
       },
-      "execution_count": 1,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sat Feb 15 19:48:43 2025       \n",
+            "Sun Mar  9 11:14:34 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -4033,7 +4033,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   52C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   45C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -4056,12 +4056,12 @@
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "6bc381ed-25bf-4c97-ab74-979b563c6f9c",
+        "outputId": "d25b0581-b1a8-45a9-fc56-343336dca8be",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -4080,7 +4080,7 @@
       "metadata": {
         "id": "ivcjmWyvsa_T"
       },
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -4134,7 +4134,7 @@
       "metadata": {
         "id": "eNPwJm51saxP"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -4158,12 +4158,12 @@
       ],
       "metadata": {
         "id": "Zp4uS-x3K4cB",
-        "outputId": "8a97ca14-1039-4f1f-d0ed-781e415336d8",
+        "outputId": "c4f07d60-63e1-4b5b-fbf6-5d2e202fc630",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -4181,7 +4181,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:00<00:00, 16.5MB/s]\n"
+            "100%|██████████| 9.91M/9.91M [00:02<00:00, 4.59MB/s]\n"
           ]
         },
         {
@@ -4202,7 +4202,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 499kB/s]\n"
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 134kB/s]\n"
           ]
         },
         {
@@ -4223,7 +4223,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1.65M/1.65M [00:00<00:00, 4.51MB/s]\n"
+            "100%|██████████| 1.65M/1.65M [00:09<00:00, 180kB/s]\n"
           ]
         },
         {
@@ -4244,7 +4244,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 2.78MB/s]"
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 7.15MB/s]"
           ]
         },
         {
@@ -4271,12 +4271,12 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "1f2012ac-5d40-49ab-dc2b-3bc1e45356dc",
+        "outputId": "06ded471-1aa7-431c-aad5-39b6dea44120",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4297,7 +4297,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -4308,12 +4308,12 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "10daa00f-58f0-49e1-9d23-e61e9ef68286",
+        "outputId": "20998e68-fd22-43e7-bcff-4f46a6413e63",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4332,7 +4332,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -4352,12 +4352,12 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "b6ccede2-412a-41d9-b01a-438994da1bf3",
+        "outputId": "02467ed9-e137-4f56-a443-7a16ba895cd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4367,7 +4367,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -4379,29 +4379,21 @@
       "metadata": {
         "id": "dJXALRO9-34m"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "img0, target0 = mnist_train[0]"
-      ],
-      "metadata": {
-        "id": "9RKLObJ5-JBe"
-      },
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# plot one image\n",
+        "\n",
+        "img0, target0 = mnist_train[0]\n",
         "plt.imshow(img0.squeeze(), cmap = \"gray\")\n",
         "plt.title(target0)"
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "ab7bb1ff-7ee5-4090-ae71-392239e6d386",
+        "outputId": "6e48545a-4c19-4cdd-ca82-5ceff7357864",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
@@ -4434,6 +4426,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# plot several images\n",
+        "\n",
         "torch.manual_seed(101)\n",
         "\n",
         "fig = plt.figure(figsize=(6,4))\n",
@@ -4449,13 +4443,13 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "46426798-95fc-4ca8-de03-3572b8102a61",
+        "outputId": "daf487f7-f648-43a4-9312-523c405c5e54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
         }
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4496,8 +4490,17 @@
       "metadata": {
         "id": "3-HY4cRZFNbR"
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Q8: Model Creation"
+      ],
+      "metadata": {
+        "id": "N06uutbZnZGh"
+      }
     },
     {
       "cell_type": "code",
