--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMc4jD/mqLPTeBnIm0dwXx2"
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMMcXXsfmytE8ANp5i5U7mT"
     },
     "kernelspec": {
       "name": "python3",
@@ -4504,7 +4505,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class TinnyVGG(nn.Module):\n",
+        "  def __init__()\n",
+        "    super().__init__"
+      ],
       "metadata": {
         "id": "AZzKHntDLqxr"
       },
