--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMMcXXsfmytE8ANp5i5U7mT"
+      "authorship_tag": "ABX9TyMWd1wuIqSPsCROXRelaQxN"
     },
     "kernelspec": {
       "name": "python3",
@@ -4507,8 +4507,11 @@
       "cell_type": "code",
       "source": [
         "class TinnyVGG(nn.Module):\n",
-        "  def __init__()\n",
-        "    super().__init__"
+        "  def __init__(self, in_shape: int, hidden_units: int, out_shape):\n",
+        "    super().__init__()\n",
+        "    self.block1 = nn.Sequential(\n",
+        "\n",
+        "    )"
       ],
       "metadata": {
         "id": "AZzKHntDLqxr"
