--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWd1wuIqSPsCROXRelaQxN"
+      "authorship_tag": "ABX9TyPtKyxl4pJ0nAGk/oP399FB"
     },
     "kernelspec": {
       "name": "python3",
@@ -4507,9 +4507,28 @@
       "cell_type": "code",
       "source": [
         "class TinnyVGG(nn.Module):\n",
+        "\n",
         "  def __init__(self, in_shape: int, hidden_units: int, out_shape):\n",
         "    super().__init__()\n",
+        "\n",
         "    self.block1 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels = in_shape,\n",
+        "                  out_channels = out_shape,\n",
+        "                  kernel_size = 3,\n",
+        "                  stride = 1,\n",
+        "                  padding = 1),\n",
+        "        nn.RelU(),\n",
+        "        nn.Conv2d(in_channels = hidden_units,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size = 3,\n",
+        "                  stride = 1,\n",
+        "                  padding = 1),\n",
+        "        nn.RelU(),\n",
+        "        nn.MaxPool2d(2)\n",
+        "    )\n",
+        "\n",
+        "    self.block2 = nn.Sequential(\n",
+        "        nn.Conv2d(),\n",
         "\n",
         "    )"
       ],
