--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtKyxl4pJ0nAGk/oP399FB"
+      "authorship_tag": "ABX9TyOKHdP6CY3YpF325pccEQQZ"
     },
     "kernelspec": {
       "name": "python3",
@@ -4528,8 +4528,23 @@
         "    )\n",
         "\n",
         "    self.block2 = nn.Sequential(\n",
-        "        nn.Conv2d(),\n",
+        "        nn.Conv2d(in_channels = hidden_units,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size = 3,\n",
+        "                  stride = 1,\n",
+        "                  padding =1),\n",
+        "        nn.RelU(),\n",
+        "        nn.Conv2d(in_channels = hidden_units,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size = 3,\n",
+        "                  stride = 1,\n",
+        "                  padding = 1),\n",
+        "        nn.RelU(),\n",
+        "        nn.MaxPool2d(2)\n",
+        "    )\n",
         "\n",
+        "    self.classifier = nn.Sequential(\n",
+        "        nn.\n",
         "    )"
       ],
       "metadata": {
