--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOKHdP6CY3YpF325pccEQQZ"
+      "authorship_tag": "ABX9TyO1uwuE5c6YftkL2aUaMgIK"
     },
     "kernelspec": {
       "name": "python3",
@@ -4019,7 +4019,7 @@
         "id": "7lmqTB7wDiOU",
         "outputId": "50056387-b261-46c5-e052-03f487d7b19c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4062,7 +4062,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4081,7 +4081,7 @@
       "metadata": {
         "id": "ivcjmWyvsa_T"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4135,7 +4135,7 @@
       "metadata": {
         "id": "eNPwJm51saxP"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4164,7 +4164,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4277,7 +4277,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4314,7 +4314,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4358,7 +4358,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4380,7 +4380,7 @@
       "metadata": {
         "id": "dJXALRO9-34m"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4400,7 +4400,7 @@
           "height": 470
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4450,7 +4450,7 @@
           "height": 364
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4491,7 +4491,7 @@
       "metadata": {
         "id": "3-HY4cRZFNbR"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4509,43 +4509,48 @@
         "class TinnyVGG(nn.Module):\n",
         "\n",
         "  def __init__(self, in_shape: int, hidden_units: int, out_shape):\n",
-        "    super().__init__()\n",
+        "      super().__init__()\n",
         "\n",
-        "    self.block1 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels = in_shape,\n",
-        "                  out_channels = out_shape,\n",
-        "                  kernel_size = 3,\n",
-        "                  stride = 1,\n",
-        "                  padding = 1),\n",
-        "        nn.RelU(),\n",
-        "        nn.Conv2d(in_channels = hidden_units,\n",
-        "                  out_channels = hidden_units,\n",
-        "                  kernel_size = 3,\n",
-        "                  stride = 1,\n",
-        "                  padding = 1),\n",
-        "        nn.RelU(),\n",
-        "        nn.MaxPool2d(2)\n",
-        "    )\n",
+        "      self.block1 = nn.Sequential(\n",
+        "          nn.Conv2d(in_channels = in_shape,\n",
+        "                    out_channels = out_shape,\n",
+        "                    kernel_size = 3,\n",
+        "                    stride = 1,\n",
+        "                    padding = 1),\n",
+        "          nn.RelU(),\n",
+        "          nn.Conv2d(in_channels = hidden_units,\n",
+        "                    out_channels = hidden_units,\n",
+        "                    kernel_size = 3,\n",
+        "                    stride = 1,\n",
+        "                    padding = 1),\n",
+        "          nn.RelU(),\n",
+        "          nn.MaxPool2d(2)\n",
+        "      )\n",
         "\n",
-        "    self.block2 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels = hidden_units,\n",
-        "                  out_channels = hidden_units,\n",
-        "                  kernel_size = 3,\n",
-        "                  stride = 1,\n",
-        "                  padding =1),\n",
-        "        nn.RelU(),\n",
-        "        nn.Conv2d(in_channels = hidden_units,\n",
-        "                  out_channels = hidden_units,\n",
-        "                  kernel_size = 3,\n",
-        "                  stride = 1,\n",
-        "                  padding = 1),\n",
-        "        nn.RelU(),\n",
-        "        nn.MaxPool2d(2)\n",
-        "    )\n",
+        "      self.block2 = nn.Sequential(\n",
+        "          nn.Conv2d(in_channels = hidden_units,\n",
+        "                    out_channels = hidden_units,\n",
+        "                    kernel_size = 3,\n",
+        "                    stride = 1,\n",
+        "                    padding =1),\n",
+        "          nn.RelU(),\n",
+        "          nn.Conv2d(in_channels = hidden_units,\n",
+        "                    out_channels = hidden_units,\n",
+        "                    kernel_size = 3,\n",
+        "                    stride = 1,\n",
+        "                    padding = 1),\n",
+        "          nn.RelU(),\n",
+        "          nn.MaxPool2d(2)\n",
+        "      )\n",
         "\n",
-        "    self.classifier = nn.Sequential(\n",
-        "        nn.\n",
-        "    )"
+        "      self.classifier = nn.Sequential(\n",
+        "          nn.Flatten()\n",
+        "          nn.Linear(in_features = hidden_units*7*7,\n",
+        "                    out_features = out_shape)\n",
+        "      )\n",
+        "\n",
+        "    def forward(self, X: torch.Tensor):\n",
+        "        return self.classifier(self.block2(self.block1(X)))"
       ],
       "metadata": {
         "id": "AZzKHntDLqxr"
@@ -4554,9 +4559,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "32j9kVj0E_fJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "\n",
         "If you found something wrong, please contact me at: muhammadhelmymmo@gmail.com"
       ],
       "metadata": {
