--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO1uwuE5c6YftkL2aUaMgIK"
+      "authorship_tag": "ABX9TyNph/UayiaO4BEsHDB5dr3q"
     },
     "kernelspec": {
       "name": "python3",
@@ -4017,15 +4017,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "50056387-b261-46c5-e052-03f487d7b19c"
+        "outputId": "8322c4c4-02a6-49dd-fb7a-a6cc97dec8e8"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sun Mar  9 11:14:34 2025       \n",
+            "Mon Mar 10 15:38:39 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -4034,7 +4034,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   45C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   63C    P8             12W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -4053,16 +4053,17 @@
       "cell_type": "code",
       "source": [
         "import torch\n",
-        "print(torch.__version__)"
+        "print(torch.__version__)\n",
+        "from torch import nn"
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "d25b0581-b1a8-45a9-fc56-343336dca8be",
+        "outputId": "a7f77543-9986-4b53-9874-3213f0fab8a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -4081,7 +4082,7 @@
       "metadata": {
         "id": "ivcjmWyvsa_T"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -4135,7 +4136,7 @@
       "metadata": {
         "id": "eNPwJm51saxP"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -4158,112 +4159,10 @@
         ")"
       ],
       "metadata": {
-        "id": "Zp4uS-x3K4cB",
-        "outputId": "c4f07d60-63e1-4b5b-fbf6-5d2e202fc630",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Zp4uS-x3K4cB"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-            "Failed to download (trying next):\n",
-            "HTTP Error 404: Not Found\n",
-            "\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to data/MNIST/raw/train-images-idx3-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 9.91M/9.91M [00:02<00:00, 4.59MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/train-images-idx3-ubyte.gz to data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
-            "Failed to download (trying next):\n",
-            "HTTP Error 404: Not Found\n",
-            "\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 134kB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/train-labels-idx1-ubyte.gz to data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
-            "Failed to download (trying next):\n",
-            "HTTP Error 404: Not Found\n",
-            "\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 1.65M/1.65M [00:09<00:00, 180kB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/t10k-images-idx3-ubyte.gz to data/MNIST/raw\n",
-            "\n",
-            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-            "Failed to download (trying next):\n",
-            "HTTP Error 404: Not Found\n",
-            "\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
-            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 7.15MB/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/MNIST/raw/t10k-labels-idx1-ubyte.gz to data/MNIST/raw\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4272,12 +4171,12 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "06ded471-1aa7-431c-aad5-39b6dea44120",
+        "outputId": "c05cac8d-ad48-4c77-f360-d9004a06c00e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4298,7 +4197,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 23
         }
       ]
     },
@@ -4309,12 +4208,12 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "20998e68-fd22-43e7-bcff-4f46a6413e63",
+        "outputId": "3a071e6e-4cfa-47e6-f4d7-86e671939d9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4333,7 +4232,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 24
         }
       ]
     },
@@ -4353,12 +4252,12 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "02467ed9-e137-4f56-a443-7a16ba895cd1",
+        "outputId": "ba6e8aa3-f796-413e-b9c8-808c53da27e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4368,7 +4267,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 25
         }
       ]
     },
@@ -4380,7 +4279,7 @@
       "metadata": {
         "id": "dJXALRO9-34m"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -4394,13 +4293,13 @@
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "6e48545a-4c19-4cdd-ca82-5ceff7357864",
+        "outputId": "4cfd1bbc-d7d7-4dc2-eaee-dd8cdcdcec9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
         }
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4410,7 +4309,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -4444,13 +4343,13 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "daf487f7-f648-43a4-9312-523c405c5e54",
+        "outputId": "ca7bd59c-2759-428e-bc21-82f8a2a463eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
         }
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4491,7 +4390,7 @@
       "metadata": {
         "id": "3-HY4cRZFNbR"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -4506,63 +4405,116 @@
     {
       "cell_type": "code",
       "source": [
-        "class TinnyVGG(nn.Module):\n",
+        "class TinyVGG(nn.Module):\n",
         "\n",
         "  def __init__(self, in_shape: int, hidden_units: int, out_shape):\n",
-        "      super().__init__()\n",
+        "    super().__init__()\n",
         "\n",
-        "      self.block1 = nn.Sequential(\n",
-        "          nn.Conv2d(in_channels = in_shape,\n",
-        "                    out_channels = out_shape,\n",
-        "                    kernel_size = 3,\n",
-        "                    stride = 1,\n",
-        "                    padding = 1),\n",
-        "          nn.RelU(),\n",
-        "          nn.Conv2d(in_channels = hidden_units,\n",
-        "                    out_channels = hidden_units,\n",
-        "                    kernel_size = 3,\n",
-        "                    stride = 1,\n",
-        "                    padding = 1),\n",
-        "          nn.RelU(),\n",
-        "          nn.MaxPool2d(2)\n",
-        "      )\n",
+        "    self.block1 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels = in_shape,\n",
+        "                  out_channels = out_shape,\n",
+        "                  kernel_size = 3,\n",
+        "                  stride = 1,\n",
+        "                  padding = 1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels = hidden_units,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size = 3,\n",
+        "                  stride = 1,\n",
+        "                  padding = 1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(2)\n",
+        "    )\n",
         "\n",
-        "      self.block2 = nn.Sequential(\n",
-        "          nn.Conv2d(in_channels = hidden_units,\n",
-        "                    out_channels = hidden_units,\n",
-        "                    kernel_size = 3,\n",
-        "                    stride = 1,\n",
-        "                    padding =1),\n",
-        "          nn.RelU(),\n",
-        "          nn.Conv2d(in_channels = hidden_units,\n",
-        "                    out_channels = hidden_units,\n",
-        "                    kernel_size = 3,\n",
-        "                    stride = 1,\n",
-        "                    padding = 1),\n",
-        "          nn.RelU(),\n",
-        "          nn.MaxPool2d(2)\n",
-        "      )\n",
+        "    self.block2 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels = hidden_units,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size = 3,\n",
+        "                  stride = 1,\n",
+        "                  padding =1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels = hidden_units,\n",
+        "                  out_channels = hidden_units,\n",
+        "                  kernel_size = 3,\n",
+        "                  stride = 1,\n",
+        "                  padding = 1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(2)\n",
+        "    )\n",
         "\n",
-        "      self.classifier = nn.Sequential(\n",
-        "          nn.Flatten()\n",
-        "          nn.Linear(in_features = hidden_units*7*7,\n",
-        "                    out_features = out_shape)\n",
-        "      )\n",
+        "    self.classifier = nn.Sequential(\n",
+        "        nn.Flatten(),\n",
+        "        nn.Linear(in_features = hidden_units*7*7,\n",
+        "                  out_features = out_shape)\n",
+        "    )\n",
         "\n",
-        "    def forward(self, X: torch.Tensor):\n",
-        "        return self.classifier(self.block2(self.block1(X)))"
+        "  def forward(self, X: torch.Tensor):\n",
+        "    return self.classifier(self.block2(self.block1(X)))"
       ],
       "metadata": {
         "id": "AZzKHntDLqxr"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(101)\n",
+        "\n",
+        "tinyvgg_model = TinyVGG(\n",
+        "    in_shape = 1,\n",
+        "    hidden_units = 10,\n",
+        "    out_shape = len(mnist_train.classes)\n",
+        ").to(device)\n",
+        "\n",
+        "tinyvgg_model"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "32j9kVj0E_fJ",
+        "outputId": "b6c00b17-6654-4465-9518-0b10c26e9b78"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TinyVGG(\n",
+              "  (block1): Sequential(\n",
+              "    (0): Conv2d(1, 10, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (1): ReLU()\n",
+              "    (2): Conv2d(10, 10, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (3): ReLU()\n",
+              "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  )\n",
+              "  (block2): Sequential(\n",
+              "    (0): Conv2d(10, 10, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (1): ReLU()\n",
+              "    (2): Conv2d(10, 10, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (3): ReLU()\n",
+              "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  )\n",
+              "  (classifier): Sequential(\n",
+              "    (0): Flatten(start_dim=1, end_dim=-1)\n",
+              "    (1): Linear(in_features=490, out_features=10, bias=True)\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "32j9kVj0E_fJ"
+        "id": "-l2zTTlYvqSl"
       },
       "execution_count": null,
       "outputs": []
