--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,8 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNph/UayiaO4BEsHDB5dr3q"
+      "authorship_tag": "ABX9TyPjuu7gK8BNvEkQ8rUo8UdN",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -706,6 +707,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MuhammadHelmyOmar/PyTorch_Projects/blob/main/Computer_Vision.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -4017,15 +4028,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "8322c4c4-02a6-49dd-fb7a-a6cc97dec8e8"
+        "outputId": "042213a7-c2da-4016-84a7-13efaf97eec4"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mon Mar 10 15:38:39 2025       \n",
+            "Tue Mar 11 12:09:26 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -4034,7 +4045,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   63C    P8             12W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   65C    P8             11W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -4058,12 +4069,12 @@
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "a7f77543-9986-4b53-9874-3213f0fab8a5",
+        "outputId": "193ae977-e956-4dcc-8dd6-9dcca29d34c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -4082,7 +4093,7 @@
       "metadata": {
         "id": "ivcjmWyvsa_T"
       },
-      "execution_count": 20,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -4136,7 +4147,7 @@
       "metadata": {
         "id": "eNPwJm51saxP"
       },
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -4159,10 +4170,112 @@
         ")"
       ],
       "metadata": {
-        "id": "Zp4uS-x3K4cB"
+        "id": "Zp4uS-x3K4cB",
+        "outputId": "f5b1aadf-a328-4bf7-b748-cc3d5cb4b4af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 22,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 404: Not Found\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 16.6MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/MNIST/raw/train-images-idx3-ubyte.gz to data/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 404: Not Found\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 490kB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/MNIST/raw/train-labels-idx1-ubyte.gz to data/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 404: Not Found\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 3.94MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/MNIST/raw/t10k-images-idx3-ubyte.gz to data/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 404: Not Found\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 9.08MB/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/MNIST/raw/t10k-labels-idx1-ubyte.gz to data/MNIST/raw\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4171,12 +4284,12 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "c05cac8d-ad48-4c77-f360-d9004a06c00e",
+        "outputId": "5831c880-a533-45b1-e6fe-5bb54fa058f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4197,7 +4310,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 6
         }
       ]
     },
@@ -4208,12 +4321,12 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "3a071e6e-4cfa-47e6-f4d7-86e671939d9d",
+        "outputId": "a8a477ee-e4e4-4158-a1b6-fa6b96f990d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4232,7 +4345,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 7
         }
       ]
     },
@@ -4252,12 +4365,12 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "ba6e8aa3-f796-413e-b9c8-808c53da27e6",
+        "outputId": "c24f4f07-61f2-4465-832d-53e47048793a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4267,7 +4380,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 8
         }
       ]
     },
@@ -4279,7 +4392,7 @@
       "metadata": {
         "id": "dJXALRO9-34m"
       },
-      "execution_count": 26,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -4293,13 +4406,13 @@
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "4cfd1bbc-d7d7-4dc2-eaee-dd8cdcdcec9c",
+        "outputId": "d748afcb-676a-4a78-824b-40ebe79fa496",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
         }
       },
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4309,7 +4422,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
@@ -4343,13 +4456,13 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "ca7bd59c-2759-428e-bc21-82f8a2a463eb",
+        "outputId": "16f689be-3707-45e6-d238-f9c81af69084",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
         }
       },
-      "execution_count": 28,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4390,7 +4503,7 @@
       "metadata": {
         "id": "3-HY4cRZFNbR"
       },
-      "execution_count": 29,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -4454,7 +4567,7 @@
       "metadata": {
         "id": "AZzKHntDLqxr"
       },
-      "execution_count": 33,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -4475,9 +4588,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "32j9kVj0E_fJ",
-        "outputId": "b6c00b17-6654-4465-9518-0b10c26e9b78"
+        "outputId": "fb10e186-681a-46bf-f9f9-67fd783e8389"
       },
-      "execution_count": 40,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4506,18 +4619,110 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 14
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# tinyvgg_model.state_dict()"
+      ],
       "metadata": {
         "id": "-l2zTTlYvqSl"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.rand(size=(1,28,28)).unsqueeze(dim=0).to(device)\n",
+        "x.shape"
+      ],
+      "metadata": {
+        "id": "_Ys8QFSfHVzK",
+        "outputId": "b1a9f6f7-6778-4cf8-ff7e-9300dde4e47c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dummy forward pass\n",
+        "\n",
+        "tinyvgg_model(x)"
+      ],
+      "metadata": {
+        "id": "ZujlMZ1vH2rV",
+        "outputId": "7be5ff38-2fb7-41c2-d3ff-446ca73be6f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.0449,  0.0378,  0.0048,  0.0125, -0.0426,  0.0332, -0.0486, -0.0574,\n",
+              "          0.0182, -0.0357]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flatten_layer = nn.Flatten()\n",
+        "flat_tensor = flatten_layer(torch.rand(size=(1,10,7,7)))\n",
+        "print(type(flat_tensor))\n",
+        "print(flat_tensor.shape)"
+      ],
+      "metadata": {
+        "id": "lqCx_J6zPrKa",
+        "outputId": "64446a2e-18ea-4963-893d-76ea25256859",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'torch.Tensor'>\n",
+            "torch.Size([1, 490])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "YCnaVNc-QobG"
+      }
     },
     {
       "cell_type": "markdown",
