--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,8 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPjuu7gK8BNvEkQ8rUo8UdN",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNI4zZA21R5bG1v5DDpOOc+"
     },
     "kernelspec": {
       "name": "python3",
@@ -707,16 +706,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadHelmyOmar/PyTorch_Projects/blob/main/Computer_Vision.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -4171,10 +4160,10 @@
       ],
       "metadata": {
         "id": "Zp4uS-x3K4cB",
-        "outputId": "f5b1aadf-a328-4bf7-b748-cc3d5cb4b4af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f5b1aadf-a328-4bf7-b748-cc3d5cb4b4af"
       },
       "execution_count": 5,
       "outputs": [
@@ -4641,11 +4630,11 @@
         "x.shape"
       ],
       "metadata": {
-        "id": "_Ys8QFSfHVzK",
-        "outputId": "b1a9f6f7-6778-4cf8-ff7e-9300dde4e47c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_Ys8QFSfHVzK",
+        "outputId": "b1a9f6f7-6778-4cf8-ff7e-9300dde4e47c"
       },
       "execution_count": 21,
       "outputs": [
@@ -4669,11 +4658,11 @@
         "tinyvgg_model(x)"
       ],
       "metadata": {
-        "id": "ZujlMZ1vH2rV",
-        "outputId": "7be5ff38-2fb7-41c2-d3ff-446ca73be6f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZujlMZ1vH2rV",
+        "outputId": "7be5ff38-2fb7-41c2-d3ff-446ca73be6f9"
       },
       "execution_count": 22,
       "outputs": [
@@ -4699,11 +4688,11 @@
         "print(flat_tensor.shape)"
       ],
       "metadata": {
-        "id": "lqCx_J6zPrKa",
-        "outputId": "64446a2e-18ea-4963-893d-76ea25256859",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lqCx_J6zPrKa",
+        "outputId": "64446a2e-18ea-4963-893d-76ea25256859"
       },
       "execution_count": 30,
       "outputs": [
@@ -4719,10 +4708,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### Q9: Training"
+      ],
       "metadata": {
         "id": "YCnaVNc-QobG"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "X7yhVmFKXmZn"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
