--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -6,7 +6,8 @@
       "provenance": [],
       "gpuType": "T4",
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNI4zZA21R5bG1v5DDpOOc+"
+      "authorship_tag": "ABX9TyOyhSRhAoKjdoQEEwHZKAwV",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -706,6 +707,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MuhammadHelmyOmar/PyTorch_Projects/blob/main/Computer_Vision.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -4017,15 +4028,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7lmqTB7wDiOU",
-        "outputId": "042213a7-c2da-4016-84a7-13efaf97eec4"
+        "outputId": "e63e769d-59e0-49a4-ecc7-a9194f4f5090"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tue Mar 11 12:09:26 2025       \n",
+            "Tue Mar 11 14:39:53 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -4034,7 +4045,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   65C    P8             11W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   51C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -4058,12 +4069,12 @@
       ],
       "metadata": {
         "id": "J23A9i559Nf6",
-        "outputId": "193ae977-e956-4dcc-8dd6-9dcca29d34c0",
+        "outputId": "bd07c16b-ffb2-445a-fa54-5eefe95b12ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -4082,7 +4093,7 @@
       "metadata": {
         "id": "ivcjmWyvsa_T"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -4136,7 +4147,7 @@
       "metadata": {
         "id": "eNPwJm51saxP"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -4163,9 +4174,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5b1aadf-a328-4bf7-b748-cc3d5cb4b4af"
+        "outputId": "06a650cd-11ce-464b-db86-e43d8a6ffdbc"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -4183,7 +4194,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:00<00:00, 16.6MB/s]\n"
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 16.0MB/s]\n"
           ]
         },
         {
@@ -4204,7 +4215,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 490kB/s]\n"
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 484kB/s]\n"
           ]
         },
         {
@@ -4225,7 +4236,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 1.65M/1.65M [00:00<00:00, 3.94MB/s]\n"
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 4.48MB/s]\n"
           ]
         },
         {
@@ -4246,7 +4257,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 9.08MB/s]"
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 6.06MB/s]"
           ]
         },
         {
@@ -4273,12 +4284,12 @@
       ],
       "metadata": {
         "id": "qDOW03q-M4kA",
-        "outputId": "5831c880-a533-45b1-e6fe-5bb54fa058f9",
+        "outputId": "a4cb2d23-0c6c-4c75-e332-5b75d2c76b6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4299,7 +4310,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -4310,12 +4321,12 @@
       ],
       "metadata": {
         "id": "muF_skRrB0l4",
-        "outputId": "a8a477ee-e4e4-4158-a1b6-fa6b96f990d1",
+        "outputId": "756a7c5f-2e5b-4533-8d09-8e22642a3412",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4334,7 +4345,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -4354,12 +4365,12 @@
       ],
       "metadata": {
         "id": "3nr1piYe9sK8",
-        "outputId": "c24f4f07-61f2-4465-832d-53e47048793a",
+        "outputId": "1927bce1-1999-4cef-9cea-3f1a001e53ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4369,7 +4380,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -4381,7 +4392,7 @@
       "metadata": {
         "id": "dJXALRO9-34m"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -4395,13 +4406,13 @@
       ],
       "metadata": {
         "id": "adQ0bDl8-Vq0",
-        "outputId": "d748afcb-676a-4a78-824b-40ebe79fa496",
+        "outputId": "04c6cb5e-0541-43fd-c287-1172fbed5516",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 470
         }
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4411,7 +4422,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -4445,13 +4456,13 @@
       ],
       "metadata": {
         "id": "4Y9DEbX-ApkA",
-        "outputId": "16f689be-3707-45e6-d238-f9c81af69084",
+        "outputId": "07ad68c8-5941-4dc1-ec8b-3993428ece5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
         }
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4492,7 +4503,7 @@
       "metadata": {
         "id": "3-HY4cRZFNbR"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -4556,7 +4567,7 @@
       "metadata": {
         "id": "AZzKHntDLqxr"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -4577,9 +4588,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "32j9kVj0E_fJ",
-        "outputId": "fb10e186-681a-46bf-f9f9-67fd783e8389"
+        "outputId": "addbb156-b800-4ea8-e47f-a1e49c330b69"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4608,7 +4619,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -4620,7 +4631,7 @@
       "metadata": {
         "id": "-l2zTTlYvqSl"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -4634,9 +4645,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Ys8QFSfHVzK",
-        "outputId": "b1a9f6f7-6778-4cf8-ff7e-9300dde4e47c"
+        "outputId": "82cf84bc-be75-4e05-bc04-462e2364c8e9"
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4646,7 +4657,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 17
         }
       ]
     },
@@ -4662,20 +4673,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZujlMZ1vH2rV",
-        "outputId": "7be5ff38-2fb7-41c2-d3ff-446ca73be6f9"
+        "outputId": "d1322070-f8b3-4f39-bdff-6e4ac8dcc983"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[-0.0449,  0.0378,  0.0048,  0.0125, -0.0426,  0.0332, -0.0486, -0.0574,\n",
-              "          0.0182, -0.0357]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+              "tensor([[-0.0494,  0.0394,  0.0062,  0.0080, -0.0450,  0.0306, -0.0474, -0.0579,\n",
+              "          0.0176, -0.0361]], device='cuda:0', grad_fn=<AddmmBackward0>)"
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 18
         }
       ]
     },
@@ -4692,9 +4703,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lqCx_J6zPrKa",
-        "outputId": "64446a2e-18ea-4963-893d-76ea25256859"
+        "outputId": "ee2672fe-498a-4995-9531-13b03fa14ae3"
       },
-      "execution_count": 30,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -4717,9 +4728,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "\n",
+        "optimizer = torch.optim.SGD(\n",
+        "    params = tinyvgg_model.parameters(),\n",
+        "    lr = 0.1\n",
+        ")"
+      ],
       "metadata": {
         "id": "X7yhVmFKXmZn"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from timeit import default_timer as timer\n",
+        "from tqdm import tqdm"
+      ],
+      "metadata": {
+        "id": "WuVJReKtp6Fc"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(101)\n",
+        "\n",
+        "EPOCHS = 2\n",
+        "\n",
+        "for epoch in tqdm(range(EPOCHS)):\n",
+        ""
+      ],
+      "metadata": {
+        "id": "p6EX825lqIPe"
       },
       "execution_count": null,
       "outputs": []
